odh-manifests/smaug-stage/trino/base/trino-coordinator-dc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trino-coordinator
  labels:
    instance: trino
    role: trino-coordinator
spec:
  selector:
    matchLabels:
      instance: trino
      role: trino-coordinator
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        instance: trino
        role: trino-coordinator
    spec:
      volumes:
        - name: trino-config-volume
          secret:
            secretName: trino-config
            defaultMode: 420
        - name: trino-catalogs-volume
          secret:
            secretName: trino-catalog
            defaultMode: 420
        - name: prometheus-exporter
          secret:
            secretName: trino-config-monitoring
            defaultMode: 420
            items:
              - key: config.yaml
                path: config.yaml
      containers:
        - resources:
            requests:
              cpu: $(trino_cpu_request)
              memory: $(trino_memory_request)
            limits:
              cpu: $(trino_cpu_limit)
              memory: $(trino_memory_limit)
          name: trino-coordinator
          command:
            - /usr/lib/trino/bin/run-trino
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: trino-config-volume
              mountPath: /etc/trino
            - name: prometheus-exporter
              mountPath: /etc/trino/prometheus
            - name: trino-catalogs-volume
              mountPath: /etc/trino/catalog
          image: $(trino_image)
          args:
            - --config=/etc/trino/config-coordinator.properties
            - --jvm-config=/etc/trino/jvm-coordinator.config
