odh-manifests/smaug-stage/trino/base/trino-worker-dc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trino-worker
  labels:
    instance: trino
    role: trino-worker
spec:
  replicas: 3
  selector:
    matchLabels:
      instance: trino
      role: trino-worker
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        instance: trino
        role: trino-worker
    spec:
      volumes:
        - name: trino-config-volume
          secret:
            secretName: trino-config
            defaultMode: 420
        - name: trino-catalogs-volume
          secret:
            secretName: trino-catalog
            defaultMode: 420
      containers:
        - resources:
            requests:
              cpu: $(trino_cpu_request)
              memory: $(trino_memory_request)
            limits:
              cpu: $(trino_cpu_limit)
              memory: $(trino_memory_limit)
          name: trino-worker
          command:
            - /usr/lib/trino/bin/run-trino
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: trino-config-volume
              mountPath: /etc/trino
            - name: trino-catalogs-volume
              mountPath: /etc/trino/catalog
          image: $(trino_image)
          args:
            - --config=/etc/trino/config-worker.properties
