odh-manifests/smaug-stage/trino/base/trino-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: trino-route
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  to:
    kind: Service
    name: trino-service
  port:
    targetPort: 8080
